--- a/index.html
+++ b/index.html
@@ -9,65 +9,73 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1>Ben Cofield</h1>
+      <p>22 year old .NET developer practicing HTML in this document</p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li><a href="https://www.linkedin.com/in/ben-cofield-89707924a/">Linked in</a> </li>
+        <li><a href="https://truecoders.io/">TrueCoders</a></li>
+        <li><a href="https://google.com">My Most Visited Website</a></li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="./images/example.png" alt="Example PNG image">
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+        <strong>point</strong>," <span>Bredon</span> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        would I want to win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
 
     <div id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
+      <nav>
+        <ul>
           <div>
-            <span>
+            <li>
               <a href="/">Home</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/about">About</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/projects">Projects</a>
-            </span>
+            </li>
           </div>
-        </div>
-      </div>
+        </ul>
+      </nav>
 
-      <div>
-        <div>
+      <main>
+        <section>
           <h1>Main Heading</h1>
-          <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
+          <article>Author.. Bio...</article>
+        </section>
+        <footer>
+          <section>
             <h2>Sub Heading</h2>
-            <div>
-              <p>Lorem ipsum...</p>
-            </div>
-          </div>
-          <div>
+            <ul>
+              <li>Lorem ipsum...</li>
+            </ul>
+          </section>
+          <section>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
-            <div>
+            <ul>
               <h3>Another Sub Heading</h3>
               <p>Lorem ipsum...</p>
-            </div>
-          </div>
-        </div>
+            </ul>
+          </section>
+        </main>
 	</div>
 
       <div>
