--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Intro</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
-      <h1>Ben Cofield</h1>
+      <h1 id="title">Ben Cofield</h1>
       <p>22 year old .NET developer practicing HTML in this document</p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
       <ul>
-        <li><a href="https://www.linkedin.com/in/ben-cofield-89707924a/">Linked in</a> </li>
-        <li><a href="https://truecoders.io/">TrueCoders</a></li>
-        <li><a href="https://google.com">My Most Visited Website</a></li>
+        <li class="d-inline"><a class="nav-link" href="https://www.linkedin.com/in/ben-cofield-89707924a/">Linked in</a> </li>
+        <li class="d-inline"><a class="nav-link" href="https://truecoders.io/">TrueCoders</a></li>
+        <li class="d-inline"><a class="nav-link" href="https://google.com">My Most Visited Website</a></li>
       </ul>
     </div>
 
@@ -42,14 +43,14 @@
       <nav>
         <ul>
           <div>
-            <li>
-              <a href="/">Home</a>
+            <li class="d-inline">
+              <a class="nav-link" href="/">Home</a>
             </li>
-            <li>
-              <a href="/about">About</a>
+            <li class="d-inline">
+              <a class="nav-link" href="/about">About</a>
             </li>
-            <li>
-              <a href="/projects">Projects</a>
+            <li class="d-inline">
+              <a class="nav-link" href="/projects">Projects</a>
             </li>
           </div>
         </ul>
@@ -64,28 +65,27 @@
           <section>
             <h2>Sub Heading</h2>
             <ul>
-              <li>Lorem ipsum...</li>
+              <p>Lorem ipsum...</p>
             </ul>
           </section>
           <section>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
-            <ul>
-              <h3>Another Sub Heading</h3>
+            <h3>Another Sub Heading</h3>
               <p>Lorem ipsum...</p>
-            </ul>
-          </section>
-        </main>
+            </section>
+        </footer>
+      </main>
 	</div>
 
       <div>
         <div>
           <div>
             <span>
-              <a href="/privacy">Privacy Policy</a>
+              <a class="nav-link" href="/privacy">Privacy Policy</a>
             </span>
             <span>
-              <a href="/terms">Terms and Conditions</a>
+              <a class="nav-link" href="/terms">Terms and Conditions</a>
             </span>
           </div>
         </div>
